--- a/box/box.css
+++ b/box/box.css
@@ -1,14 +1,23 @@
-.box1 {
-  width: 300px;
-  height: 300px;
-  background-color: red;
-  margin: 30px;
-  padding: 30px;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.box2 {
-  width: 100px;
-  height: 100px;
-  background-color: blue;
-  border: 5px solid yellow;
+.header {
+  width: 100%; /* 横幅いっぱい */
+  height: 120px; /* 高さ120px */
+  background-color: red; /* 背景色red */
+}
+
+.main-visual {
+  width: 100%; /* 横幅いっぱい */
+  height: 300px; /* 高さ300px */
+  background-color: orange; /* 背景色orange */
+}
+
+.main {
+  width: 100%; /* 横幅いっぱい */
+  height: 1400px; /* 高さ1400px（多めに設定） */
+  background-color: green; /* 背景色green */
 }
