--- a/box/box.css
+++ b/box/box.css
@@ -1,8 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 
 .header {
   width: 100%; /* 横幅いっぱい */
@@ -10,10 +5,28 @@
   background-color: red; /* 背景色red */
 }
 
+.header-top {
+  width: 100%; /* 横幅いっぱい */
+  height: 70px; /* 高さ100px */
+  background-color: hotpink; /* 背景色hotpink */
+}
+
+.header-bottom {
+  width: 100%; /* 横幅いっぱい */
+  height: 50px; /* 高さ100px */
+  background-color: pink; /* 背景色pink */
+}
+
 .main-visual {
   width: 100%; /* 横幅いっぱい */
   height: 300px; /* 高さ300px */
   background-color: orange; /* 背景色orange */
+}
+
+.main-visual-content {
+  width: 350px; /* 横幅350px */
+  height: 300px; /* 親の高さに揃える */
+  background-color: gold; /* 背景色gold */
 }
 
 .main {
