--- a/box/style.css
+++ b/box/style.css
@@ -2,6 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: #6c6b6b;
+}
+
+a {
+  text-decoration: none;
 }
 
 header {
@@ -11,7 +16,8 @@ header {
   text-align: center;
 }
 
-header .heading { /* headerタグ内のheadingクラスにのみ反映される */
+header .heading {
+  /* headerタグ内のheadingクラスにのみ反映される */
   font-size: 32px;
 }
 
@@ -30,6 +36,7 @@ header .heading { /* headerタグ内のheadingクラスにのみ反映される 
 .main-visual {
   width: 100%; /* 横幅いっぱい */
   height: 300px; /* 高さ300px */
+  background-image: url(img/mv.jpg);
 }
 
 .main-visual-content {
@@ -40,8 +47,8 @@ header .heading { /* headerタグ内のheadingクラスにのみ反映される 
 .main {
   width: 840px; /* 横幅840px */
   display: flex; /* Flexboxの利用 */
-  justify-content: center; /* 子要素の横並び・中央寄せ */
-  margin: 0 auto; /* 中央寄せ（左右に余白がないとできない） */
+  justify-content: center; /* 要素の横並び・中央寄せ */
+  margin: 0 auto;
 }
 
 .blog {
@@ -55,6 +62,14 @@ header .heading { /* headerタグ内のheadingクラスにのみ反映される 
 }
 
 footer {
-  width: 100%; /* 横幅いっぱい */
-  height: 120px; /* 高さ120px */
+  width: 100%;
+  height: 120px;
+  text-align: center;
+  line-height: 120px;
+  background-color: #848282;
+}
+
+.footer-text {
+  color: #fff;
+}: #fff;
 }
